--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css"/>
+    <link rel="stylesheet" href="./css/tablet.css"/>
+    <link rel="stylesheet" href="./css/desktop.css"/>
   </head>
   <body>
     <header class="header">
@@ -50,18 +53,23 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="mobile-menu-open">
+          <svg class="mobile-menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-gamburger-open"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
-      <section class="section-hero">
+      <!-- <section class="section-hero">
         <div class="container">
           <h1 class="section-title">Effective Solutions for Your Business</h1>
           <button type="button" class="primary-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
-      <section class="section-team">
+      </section> -->
+      <!-- <section class="section-team">
         <div class="container">
           <h2 class="visually-hidden section-second-title">components</h2>
           <ul class="component-title list">
@@ -115,9 +123,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section-work">
+      <!-- <section class="section-work">
         <div class="container">
           <h2 class="section-second-title">What are we doing</h2>
           <ul class="items list">
@@ -132,9 +140,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="section-staff-block">
+      <!-- <section class="section-staff-block">
         <div class="container">
           <h2 class="section-second-title-team">Our Team</h2>
           <ul class="section-list-staff list">
@@ -316,8 +324,9 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="section-customers">
+      </section> -->
+
+      <!-- <section class="section-customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-logo list">
@@ -362,9 +371,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-section">
         <div class="footer-content">
           <a href="./index.html" class="logo link"
@@ -422,9 +431,9 @@
       
         </form>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-hidden " data-modal>
+    <!-- <div class="backdrop is-hidden " data-modal>
       <div class="modal is-hidden ">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
@@ -481,8 +490,8 @@
           <button type="submit" class="check-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
