--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
           </ul>
         </nav>
-        <button type="button" class="mobile-menu-open" class="js-open-menu">
+        <button type="button" class="mobile-menu-open js-open-menu" > 
           <svg class="mobile-menu-open-icon" width="32" height="22">
             <use href="./images/icons.svg#icon-gamburger-open"></use>
           </svg>
@@ -59,32 +59,64 @@
           </ul>
         </address> 
       </div>
-      <div class="mobile-menu" class="js-menu-container">
-        <div class="container mobaile-menu-container">
-          <button class="mobile-menu-close" class="js-close-menu">
+      <div class="mobile-menu js-menu-container ">
+        <div class="container mobile-menu-container">
+          <button class="mobile-menu-close js-close-menu" >
             <svg class="mobile-menu-close-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-          <ul class="mobile-site-nav">
-            <li class="mobile-site-list list">
-              <a href="" class="mobile-nav-link link">Studio</a>
-            </li>
-            <li class="mobile-site-list list">
-              <a href="" class="mobile-nav-link link">Portfolio</a>
-            </li>
-            <li class="mobile-site-list list">
-              <a href="" class="mobile-nav-link link">Contacts</a>
-            </li>
-          </ul>
-          <ul class="mobile-site-auth list">
-            <li class="mobile-contacts">
-              <a href="tel:+110001111111" class="mobile-phone link">+11 (000) 111-11-11</a>
-            </li>
-            <li class="mobile-contacts">
-              <a href="mailto:info@devstudio.com" class="mobile-letter link">info@devstudio.com</a>
-            </li>
-          </ul>
+          <div class="mobile-menu-wrap">
+            <ul class="mobile-site-nav">
+              <li class="mobile-site-list list">
+                <a href="" class="mobile-nav-link link">studio</a>
+              </li>
+              <li class="mobile-site-list list">
+                <a href="" class="mobile-nav-link link">portfolio</a>
+              </li>
+              <li class="mobile-site-list list">
+                <a href="" class="mobile-nav-link link">contacts</a>
+              </li>
+            </ul>
+            <ul class="mobile-site-auth list">
+              <li class="mobile-contacts">
+                <a href="tel:+110001111111" class="mobile-phone link">+11 (000) 111-11-11</a>
+              </li>
+              <li class="mobile-contacts">
+                <a href="mailto:info@devstudio.com" class="mobile-letter link">info@devstudio.com</a>
+              </li>
+            </ul>
+            <ul class="mobile-site-list list">
+              <li class="mobile-site-list-item">
+                <a href="" class="mobile-site-link">
+                  <svg class="mobile-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-site-list-item">
+                <a href="" class="mobile-site-link">
+                  <svg class="mobile-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-site-list-item">
+                <a href="" class="mobile-site-link">
+                  <svg class="mobile-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-site-list-item">
+                <a href="" class="mobile-site-link">
+                  <svg class="mobile-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
