--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </ul>
           
             
-              <ul class="mobile-site-list list">
+              <ul class="mobile-site-list-wrap list">
                 <li class="mobile-site-list-item">
                   <a href="" class="mobile-site-link">
                     <svg class="mobile-svg" width="24" height="24">
@@ -126,14 +126,14 @@
       </div>
     </header>
     <main>
-      <!-- <section class="section-hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="section-title">Effective Solutions for Your Business</h1>
           <button type="button" class="primary-button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="section-team">
         <div class="container">
           <h2 class="visually-hidden section-second-title">components</h2>
