--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </button>
         </div>
       </section>
-      <!-- <section class="section-team">
+      <section class="section-team">
         <div class="container">
           <h2 class="visually-hidden section-second-title">components</h2>
           <ul class="component-title list">
@@ -188,7 +188,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section-work">
         <div class="container">
@@ -498,14 +498,13 @@
       </div>
     </footer> -->
 
-    <!-- <div class="backdrop is-hidden " data-modal>
+     <div class="backdrop is-hidden " data-modal>
       <div class="modal is-hidden ">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-
         <b class="modal-title">Leave your contacts and we will call you back</b>
         <form> 
           <label class="modal-label">
@@ -517,7 +516,6 @@
               </svg>
             </span>
           </label>
-
           <label class="modal-label">
             <span class="modal-name">Phone</span>
             <span class="modal-wrap">
@@ -527,7 +525,6 @@
               </svg>
             </span>
           </label>
-
           <label class="modal-label">
             <span class="modal-name">Email</span>
             <span class="modal-wrap">
@@ -537,13 +534,10 @@
               </svg>
             </span>
           </label>
-
-          <label class="modal-wrap">
+          <label class="modal-wrap-comment">
             <span class="modal-name">Comment</span>
             <textarea  name="comment" placeholder="Text input"></textarea>
           </label>
-         
-          
             <label class="modal-checkbox" >
               <input class="modal-check visually-hidden" type="checkbox" name="checkbox"  value="checkbox" checked   />
               <span class="check-box"></span>
@@ -555,9 +549,9 @@
           <button type="submit" class="check-btn">Send</button>
         </form>
       </div>
-    </div> -->
+    </div> 
 
-    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
