--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
       </section>
 
-      <!-- <section class="section-work">
+      <section class="section-work">
         <div class="container">
           <h2 class="section-second-title">What are we doing</h2>
           <ul class="items list">
@@ -205,191 +205,193 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
 
-      <!-- <section class="section-staff-block">
+      <section class="section-staff-block">
         <div class="container">
           <h2 class="section-second-title-team">Our Team</h2>
-          <ul class="section-list-staff list">
-            <li class="section-staff">
-              <img
-                src="./images/img4.jpg"
-                alt="photo Mark Guerrero"
-                width="264"
-              />
-              <div class="card-list">
-                <h3 class="section-staff-name">Mark Guerrero</h3>
-                <p class="section-desc">Product Designer</p>
-                <ul class="site-list list">
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="section-staff">
-              <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
-              <div class="card-list">
-                <h3 class="section-staff-name">Tom Ford</h3>
-                <p class="section-desc">Frontend Developer</p>
-                <ul class="site-list list">
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="section-staff">
-              <img
-                src="./images/img6.jpg"
-                alt="photo Camila Garcia"
-                width="264"
-              />
-              <div class="card-list">
-                <h3 class="section-staff-name">Camila Garcia</h3>
-                <p class="section-desc">Marketing</p>
-                <ul class="site-list list">
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="section-staff">
-              <img
-                src="./images/img7.jpg"
-                alt="photo Daniel Wilson"
-                width="264"
-              />
-              <div class="card-list">
-                <h3 class="section-staff-name">Daniel Wilson</h3>
-                <p class="section-desc">UI Designer</p>
-                <ul class="site-list list">
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-twitter-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-facebook-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                  <li class="site-icon">
-                    <a href="" class="site-link"
-                      ><svg class="site-icon-size" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-linkedin-1"
-                        ></use></svg
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-          </ul>
+          <div class="section-mob-staff">
+            <ul class="section-list-staff list">
+              <li class="section-staff">
+                <img
+                  src="./images/img4.jpg"
+                  alt="photo Mark Guerrero"
+                  width="264"
+                />
+                <div class="card-list">
+                  <h3 class="section-staff-name">Mark Guerrero</h3>
+                  <p class="section-desc">Product Designer</p>
+                  <ul class="site-list list">
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-twitter-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-facebook-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-linkedin-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="section-staff">
+                <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
+                <div class="card-list">
+                  <h3 class="section-staff-name">Tom Ford</h3>
+                  <p class="section-desc">Frontend Developer</p>
+                  <ul class="site-list list">
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-twitter-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-facebook-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-linkedin-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="section-staff">
+                <img
+                  src="./images/img6.jpg"
+                  alt="photo Camila Garcia"
+                  width="264"
+                />
+                <div class="card-list">
+                  <h3 class="section-staff-name">Camila Garcia</h3>
+                  <p class="section-desc">Marketing</p>
+                  <ul class="site-list list">
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-twitter-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-facebook-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-linkedin-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="section-staff">
+                <img
+                  src="./images/img7.jpg"
+                  alt="photo Daniel Wilson"
+                  width="264"
+                />
+                <div class="card-list">
+                  <h3 class="section-staff-name">Daniel Wilson</h3>
+                  <p class="section-desc">UI Designer</p>
+                  <ul class="site-list list">
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-instagram-2"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-twitter-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-facebook-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                    <li class="site-icon">
+                      <a href="" class="site-link"
+                        ><svg class="site-icon-size" width="16" height="16">
+                          <use
+                            href="./images/icons.svg#icon-linkedin-1"
+                          ></use></svg
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section-customers">
         <div class="container">
