--- a/index.html
+++ b/index.html
@@ -195,13 +195,25 @@
           <h2 class="section-second-title">What are we doing</h2>
           <ul class="items list">
             <li class="work-item">
-              <img src="./images/img1.jpg" alt="monitor" width="360" />
+              <img 
+              srcset="./images/img1.jpg 1x, ./images/Rectangle1-2x 2x.jpg"
+              src="./images/img1.jpg" 
+              alt="monitor" 
+              width="360" />
             </li>
             <li class="work-item">
-              <img src="./images/img2.jpg" alt="phone" width="360" />
+              <img 
+              srcset="./images/img2.jpg 1x, ./images/Rectangle2-2x 2x.jpg"
+              src="./images/img2.jpg" 
+              alt="phone" 
+              width="360" />
             </li>
             <li class="work-item">
-              <img src="./images/img3.jpg" alt="phone in hand" width="360" />
+              <img 
+              srcset="./images/img3.jpg 1x, ./images/Rectangle3-2x 2x.jpg"
+              src="./images/img3.jpg"
+              alt="phone in hand"
+              width="360" />
             </li>
           </ul>
         </div>
@@ -214,6 +226,7 @@
             <ul class="section-list-staff list">
               <li class="section-staff">
                 <img
+                  srcset="./images/img4.jpg 1x, ./images/img1-2x.jpg 2x"
                   src="./images/img4.jpg"
                   alt="photo Mark Guerrero"
                   width="264"
@@ -258,7 +271,11 @@
                 </div>
               </li>
               <li class="section-staff">
-                <img src="./images/img5.jpg" alt="photo Tom Ford" width="264" />
+                <img
+                 srcset="./images/img5.jpg 1x, ./images/img2-2x.jpg 2x"
+                 src="./images/img5.jpg"
+                 alt="photo Tom Ford"
+                width="264" />
                 <div class="card-list">
                   <h3 class="section-staff-name">Tom Ford</h3>
                   <p class="section-desc">Frontend Developer</p>
@@ -300,6 +317,7 @@
               </li>
               <li class="section-staff">
                 <img
+                  srcset="./images/img6.jpg 1x, ./images/img3-2x.jpg 2x"
                   src="./images/img6.jpg"
                   alt="photo Camila Garcia"
                   width="264"
@@ -345,6 +363,7 @@
               </li>
               <li class="section-staff">
                 <img
+                  srcset="./images/img7.jpg 1x, ./images/img4-2x.jpg 2x"
                   src="./images/img7.jpg"
                   alt="photo Daniel Wilson"
                   width="264"
@@ -393,7 +412,7 @@
         </div>
       </section>
 
-      <!-- <section class="section-customers">
+      <section class="section-customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-logo list">
