--- a/index.html
+++ b/index.html
@@ -415,51 +415,53 @@
       <section class="section-customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
-          <ul class="customers-logo list">
-            <li class="customers-item">
-              <a class="customers-link" href="">
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a class="customers-link" href="">
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a class="customers-link" href="">
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a class="customers-link" href=""
-                ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-3"></use></svg
-              ></a>
-            </li>
-            <li class="customers-item">
-              <a class="customers-link" href=""
-                ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-4"></use></svg
-              ></a>
-            </li>
-            <li class="customers-item">
-              <a class="customers-link" href=""
-                ><svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-Logo-5"></use></svg
-              ></a>
-            </li>
-          </ul>
+          <div class="container-tablet">
+            <ul class="customers-logo list">
+              <li class="customers-item">
+                <a class="customers-link" href="">
+                  <svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a class="customers-link" href="">
+                  <svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a class="customers-link" href="">
+                  <svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a class="customers-link" href=""
+                  ><svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo-3"></use></svg
+                ></a>
+              </li>
+              <li class="customers-item">
+                <a class="customers-link" href=""
+                  ><svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo-4"></use></svg
+                ></a>
+              </li>
+              <li class="customers-item">
+                <a class="customers-link" href=""
+                  ><svg class="customers-icon" width="104" height="56">
+                    <use href="./images/icons.svg#icon-Logo-5"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </section> -->
+      </section> 
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-section">
         <div class="footer-content">
           <a href="./index.html" class="logo link"
@@ -517,7 +519,7 @@
       
         </form>
       </div>
-    </footer> -->
+    </footer>
 
      <div class="backdrop is-hidden " data-modal>
       <div class="modal is-hidden ">
