--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a href="./portfolio.html" class="nav-link link">Portfolio</a>
             </li>
             <li class="nav-list">
-              <a href="./contacts.html" class="nav-link link">Contacts</a>
+              <a href="./contacts.html" class="nav-link  link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -71,13 +71,13 @@
          
             <ul class="mobile-site-nav">
               <li class="mobile-site-list list">
-                <a href="" class="mobile-nav-link link">studio</a>
+                <a href="./index.html" class="mobile-nav-link link">studio</a>
               </li>
               <li class="mobile-site-list list">
-                <a href="" class="mobile-nav-link link">portfolio</a>
+                <a href="./portfolio.html" class="mobile-nav-link link">portfolio</a>
               </li>
               <li class="mobile-site-list list">
-                <a href="" class="mobile-nav-link link">contacts</a>
+                <a href="./contacts.html" class="mobile-nav-link current link">contacts</a>
               </li>
             </ul>
             <ul class="mobile-site-auth list">
@@ -463,61 +463,64 @@
     </main>
     <footer class="footer">
       <div class="container footer-section">
-        <div class="footer-content">
-          <a href="./index.html" class="logo link"
-            ><span class="accent">Web</span
-            ><span class="accent-footer">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-contact">
-          <b class="footer-contact-title">Social media</b>
-          <ul class="footer-list list">
-            <li class="footer-list-item">
-              <a class="footer-link" href="">
-                <svg class="footer-item-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="">
-                <svg class="footer-item-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="">
-                <svg class="footer-item-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="footer-link" href="">
-                <svg class="footer-item-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <form class="footer-subscribe">
-            <b class="footer-subscribe-title">Subscribe</b>
-            <div class="footer-blok">
-                <input  class="footer-input" type="email" name="email" aria-label="email" placeholder="E-mail">
-              <button class="footer-btn" type="submit">Subscribe
-                <svg class="footer-svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-Frame-footer"></use>
-                </svg>
-              </button>
+        <div class="footer-section-up">
+          <div class="footer-content">
+            <a href="./index.html" class="logo link"
+              ><span class="accent">Web</span
+              ><span class="accent-footer">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
           </div>
-      
-        </form>
+          <div class="footer-contact">
+            <b class="footer-contact-title">Social media</b>
+            <ul class="footer-list list">
+              <li class="footer-list-item">
+                <a class="footer-link" href="">
+                  <svg class="footer-item-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="">
+                  <svg class="footer-item-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="">
+                  <svg class="footer-item-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="footer-link" href="">
+                  <svg class="footer-item-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-section-down">
+          <form class="footer-subscribe">
+              <b class="footer-subscribe-title">Subscribe</b>
+              <div class="footer-blok">
+                  <input  class="footer-input" type="email" name="email" aria-label="email" placeholder="E-mail">
+                <button class="footer-btn" type="submit">Subscribe
+                  <svg class="footer-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-Frame-footer"></use>
+                  </svg>
+                </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
 
