--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <a href="./portfolio.html" class="mobile-nav-link link">portfolio</a>
               </li>
               <li class="mobile-site-list list">
-                <a href="./contacts.html" class="mobile-nav-link current link">contacts</a>
+                <a href="./contacts.html" class="mobile-nav-link mob-current link">contacts</a>
               </li>
             </ul>
             <ul class="mobile-site-auth list">
@@ -196,21 +196,21 @@
           <ul class="items list">
             <li class="work-item">
               <img 
-              srcset="./images/img1.jpg 1x, ./images/Rectangle1-2x 2x.jpg"
+              srcset="./images/img1.jpg 1x, ./images/Rectangle1-2x.jpg 2x"
               src="./images/img1.jpg" 
               alt="monitor" 
               width="360" />
             </li>
             <li class="work-item">
               <img 
-              srcset="./images/img2.jpg 1x, ./images/Rectangle2-2x 2x.jpg"
+              srcset="./images/img2.jpg 1x, ./images/Rectangle2-2x.jpg 2x"
               src="./images/img2.jpg" 
               alt="phone" 
               width="360" />
             </li>
             <li class="work-item">
               <img 
-              srcset="./images/img3.jpg 1x, ./images/Rectangle3-2x 2x.jpg"
+              srcset="./images/img3.jpg 1x, ./images/Rectangle3-2x.jpg 2x"
               src="./images/img3.jpg"
               alt="phone in hand"
               width="360" />
