--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
          
             <ul class="mobile-site-nav">
               <li class="mobile-site-list list">
-                <a href="./index.html" class="mobile-nav-link link">studio</a>
+                <a href="./index.html" class="mobile-nav-link mob-current link">studio</a>
               </li>
               <li class="mobile-site-list list">
                 <a href="./portfolio.html" class="mobile-nav-link link">portfolio</a>
               </li>
               <li class="mobile-site-list list">
-                <a href="./contacts.html" class="mobile-nav-link mob-current link">contacts</a>
+                <a href="./contacts.html" class="mobile-nav-link  link">contacts</a>
               </li>
             </ul>
             <ul class="mobile-site-auth list">
