--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
           >
           <ul class="site-nav list">
             <li class="nav-list">
-              <a href="" class="nav-link link">Studio </a>
+              <a href="./index.html" class="nav-link link">Studio </a>
             </li>
             <li class="nav-list">
-              <a href="./portfolio.html" class="nav-link current link"
+              <a href="" class="nav-link current link"
                 >Portfolio</a
               >
             </li>
@@ -138,7 +138,7 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="button-list list">
             <li class="second-button">
-              <button type="button" class="button">All</button>
+              <button type="button" class="button current-btn">All</button>
             </li>
             <li class="second-button">
               <button type="button" class="button">Web Site</button>
