--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@
               srcset="./images/img1.jpg 1x, ./images/Rectangle1-2x.jpg 2x"
               src="./images/img1.jpg" 
               alt="monitor" 
-              width="360" />
+              width="360" >
             </li>
             <li class="work-item">
               <img 
               srcset="./images/img2.jpg 1x, ./images/Rectangle2-2x.jpg 2x"
               src="./images/img2.jpg" 
               alt="phone" 
-              width="360" />
+              width="360" >
             </li>
             <li class="work-item">
               <img 
               srcset="./images/img3.jpg 1x, ./images/Rectangle3-2x.jpg 2x"
               src="./images/img3.jpg"
               alt="phone in hand"
-              width="360" />
+              width="360" >
             </li>
           </ul>
         </div>
@@ -230,7 +230,7 @@
                   src="./images/img4.jpg"
                   alt="photo Mark Guerrero"
                   width="264"
-                />
+                >
                 <div class="card-list">
                   <h3 class="section-staff-name">Mark Guerrero</h3>
                   <p class="section-desc">Product Designer</p>
@@ -275,7 +275,7 @@
                  srcset="./images/img5.jpg 1x, ./images/img2-2x.jpg 2x"
                  src="./images/img5.jpg"
                  alt="photo Tom Ford"
-                width="264" />
+                width="264" >
                 <div class="card-list">
                   <h3 class="section-staff-name">Tom Ford</h3>
                   <p class="section-desc">Frontend Developer</p>
@@ -321,7 +321,7 @@
                   src="./images/img6.jpg"
                   alt="photo Camila Garcia"
                   width="264"
-                />
+                >
                 <div class="card-list">
                   <h3 class="section-staff-name">Camila Garcia</h3>
                   <p class="section-desc">Marketing</p>
@@ -367,7 +367,7 @@
                   src="./images/img7.jpg"
                   alt="photo Daniel Wilson"
                   width="264"
-                />
+                >
                 <div class="card-list">
                   <h3 class="section-staff-name">Daniel Wilson</h3>
                   <p class="section-desc">UI Designer</p>
@@ -536,7 +536,7 @@
           <label class="modal-label">
             <span class="modal-name">Name</span>
             <span class="modal-wrap">
-              <input class="modal-input" type="text" name="name" autofocus/>
+              <input class="modal-input" type="text" name="name" autofocus>
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-Frame"></use>
               </svg>
@@ -545,7 +545,7 @@
           <label class="modal-label">
             <span class="modal-name">Phone</span>
             <span class="modal-wrap">
-              <input class="modal-input" type="tel" name="tel" />
+              <input class="modal-input" type="tel" name="tel" >
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
@@ -554,7 +554,7 @@
           <label class="modal-label">
             <span class="modal-name">Email</span>
             <span class="modal-wrap">
-              <input class="modal-input" type="email" name="email" />
+              <input class="modal-input" type="email" name="email" >
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
@@ -565,7 +565,7 @@
             <textarea  name="comment" placeholder="Text input"></textarea>
           </label>
             <label class="modal-checkbox" >
-              <input class="modal-check visually-hidden" type="checkbox" name="checkbox"  value="checkbox" checked   />
+              <input class="modal-check visually-hidden" type="checkbox" name="checkbox"  value="checkbox" checked   >
               <span class="check-box"></span>
               <span>
                 I accept the terms and conditions of the
