--- a/index.html
+++ b/index.html
@@ -220,9 +220,8 @@
       </section> 
 
       <section class="section-staff-block">
-        <div class="container">
+        <div class="container section-mob-staff">
           <h2 class="section-second-title-team">Our Team</h2>
-          <div class="section-mob-staff">
             <ul class="section-list-staff list">
               <li class="section-staff">
                 <img
@@ -408,7 +407,7 @@
                 </div>
               </li>
             </ul>
-          </div>
+        
         </div>
       </section>
 
