--- a/index.html
+++ b/index.html
@@ -412,9 +412,9 @@
       </section>
 
       <section class="section-customers">
-        <div class="container">
+        <div class="container container-tablet ">
           <h2 class="customers-title">Customers</h2>
-          <div class="container-tablet">
+          
             <ul class="customers-logo list">
               <li class="customers-item">
                 <a class="customers-link" href="">
@@ -456,7 +456,7 @@
                 ></a>
               </li>
             </ul>
-          </div>
+          
         </div>
       </section> 
     </main>
